--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,36 +1,35 @@
-* {
-    padding: 0px;
-    margin: 0px;
-    list-style: none;
+body {
+  margin: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #111111;
 }
 
-body {
-    margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #111111;
-}
-ul,
 h1,
 h2,
 h3,
 h4,
-p {
-    padding: 0px;
-    margin: 0px;
-    list-style: none;
-}
-li {
-    list-style: none;
-}
-a{
-    text-decoration: none;
-    color: inherit;
-}
-img {
-    max-width: 100%;
-    display: block;
+ul,
+p,
+blockquote,
+dd {
+  margin: 0px;
 }
 
-[src$=".jpg"] {
-    border-radius: 4px;
+ul {
+  padding: 0px;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+img[src$=".jpg"] {
+  border-radius: 4px;
 }
