--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,31 @@
 @import "./global/global.css";
-@import "./utilidades/cores.css";
 @import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
 
 @import "./global/header.css";
 @import "./global/footer.css";
 
-
-@import "./seguros/seguros.css";
-
+/* Utilidades */
 @import "./utilidades/componentes.css";
 
-@import "./bicicletas/bicicletas-lista.css";
-
+/* Home */
 @import "./home/introducao.css";
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
 
+/* Bicicletas */
+@import "./bicicletas/bicicletas-lista.css";
+@import "./bicicletas/bicicletas.css";
+
+/* Bicicleta */
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
+/* Seguros */
+@import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
+
+/* Termos */
+@import "./termos/termos.css";
